--- a/editable_James.html
+++ b/editable_James.html
@@ -285,8 +285,8 @@
         }
         .silex-id-1487692153168-1 {
             width: 879px; 
-            top: 569px; 
-            left: 46px; 
+            top: 648px; 
+            left: 33px; 
             min-height: 159px; 
         }
         .silex-id-1483130400381-10 {
@@ -334,6 +334,8 @@
             min-width: 1280px;
           }
     </style>
+
+
 
 
 
@@ -619,7 +621,7 @@
                         </p>
                         <p class="normal"><span>&nbsp;&nbsp;&nbsp; </span>Slider linked below is to present the timeline of lighting source of incandescent, fluorescent and LEDs that quickly replace the old types of light and have a lot of benefits. Selected two examples,
                             one is a case for beyond illumination, information display lighting design using Philips iColor Flex at Northeastern University, Boston, MA. Another is an example of LED lighting product design which is flexible and versatile
-                            from <a href="http://www.designledproducts.com" target="_blank">designledproducts.com</a>. It could be interesting to see how it is unique in design for function.
+                            from <a href="//www.designledproducts.com" target="_blank">designledproducts.com</a>. It could be interesting to see how it is unique in design for function.
                             <br>
                         </p>
                         <p class="normal">
@@ -665,22 +667,28 @@
                     </div>
                     <div>
                         <p class="normal"><span>&nbsp;&nbsp; &nbsp;</span>First class! Skylar Tibbits and MIT architecture faculty introduced the class overview, structure and topics. Each week the course staff will give a lecture on the scheduled weekly topic and an invited
-                            guest speaker will present insights on design processes. Today Dorene Maniccia provides her experience of light design and introduction of Philips Lighting Research North America applications team to brilliant students attended
-                            with many different backgrounds.&nbsp; From Philips, Patricia Rizzo will also offer a lecture in the class, 22nd Feburary. Students will be working on weekly assignments and a project related to everything about 'LIGHT'&nbsp;
-                            during this semester. Looking forward to learning design principles and working on projects with students using Hue.</p>
+                            guest speaker will present practical experience and insights on design processes. Today, Dorene Maniccia gives her remarkable lighting design projects and introduction of Philips Lighting Research North America applications
+                            team to a brilliant student group that has many different background. In Feb. 22, Patricia Rizzo will offer a lecture in the class. Students will be working on weekly assignments and a project relating to everything about 'LIGHT'
+                            throughout the course. Philips applications team will be guiding student's project in the lab session. Looking forward to learning design principles and working on projects using Hue, together.</p>
                         <p class="normal">
-                            <br>
+
                         </p>
-                        <p class="normal"><span>&nbsp;&nbsp;&nbsp; </span>One of interesting things , <a href="http://www.tate.org.uk/whats-on/exhibition/unilever-series-olafur-eliasson-weather-project/olafur-eliasson-weather-project">Olafur Eliasson's The Weather Project, 2003</a>.
-                            <a href="https://www.youtube.com/watch?v=kjrKYEEYhTQ">Check it out</a> (video).
-                            <br>
-                        </p>
+                        <ul>
+                            <li><span></span>One of interesting things - <a href="http://www.tate.org.uk/whats-on/exhibition/unilever-series-olafur-eliasson-weather-project/olafur-eliasson-weather-project">Olafur Eliasson's The Weather Project, 2003</a>.
+                                <a href="https://www.youtube.com/watch?v=kjrKYEEYhTQ">Check it out</a> (video)
+                                <br>
+                            </li>
+                            <li>more information on the course - How to Design [Almost] Anything: Check class website
+                                <br>
+                            </li>
+                        </ul>
                         <br>
                     </div>
                 </div>
             </div>
 
             <div data-silex-type="image" class="editable-style silex-id-1487393265576-2 image-element" data-silex-id="silex-id-1487393265576-2" style=""><img src="Photos/installation_view_olafur_eliasson_the_weather_project.jpg" class="silex-element-content"></div>
+
 
             <div data-silex-type="text" class="editable-style text-element product-details silex-id-1487692153168-1" data-silex-id="silex-id-1487692153168-1" style="">
                 <div class="silex-element-content normal">
@@ -710,6 +718,8 @@
             </div>
         </div>
     </div>
+
+
 
 
 
