--- a/editable_James_release.html
+++ b/editable_James_release.html
@@ -247,6 +247,12 @@
             min-height: 40px; 
             left: 367px; 
         }
+        .silex-id-1487705982788-0 {
+            width: 480px; 
+            top: 836px; 
+            left: 577px; 
+            min-height: 374px; 
+        }
     </style>
 
     <script type="text/javascript" src="//editor.silex.me/static/2.7/jquery.js" data-silex-static=""></script>
@@ -278,6 +284,8 @@
             min-width: 1280px;
           }
     </style>
+
+
 
 
 
@@ -563,7 +571,7 @@
                         </p>
                         <p class="normal"><span>&nbsp;&nbsp;&nbsp; </span>Slider linked below is to present the timeline of lighting source of incandescent, fluorescent and LEDs that quickly replace the old types of light and have a lot of benefits. Selected two examples,
                             one is a case for beyond illumination, information display lighting design using Philips iColor Flex at Northeastern University, Boston, MA. Another is an example of LED lighting product design which is flexible and versatile
-                            from <a href="http://www.designledproducts.com" target="_blank">designledproducts.com</a>. It could be interesting to see how it is unique in design for function.
+                            from <a href="//www.designledproducts.com" target="_blank">designledproducts.com</a>. It could be interesting to see how it is unique in design for function.
                             <br>
                         </p>
                         <p class="normal">
@@ -617,6 +625,35 @@
 
 
 
+
+
+    <div data-silex-type="text" class="editable-style text-element product-details silex-id-1487705982788-0 page-home paged-element" data-silex-id="silex-id-1487705982788-0" style="">
+        <div class="silex-element-content normal">
+            <h1 class="heading1"><font size="6">Introduction</font></h1>
+            <div>
+                <br>
+            </div>
+            <div>
+                <p class="normal"><span>&nbsp;&nbsp; &nbsp;</span>First class! Skylar Tibbits and MIT architecture faculty introduced the class overview, structure and topics. Each week the course staff will give a lecture on the scheduled weekly topic and an invited guest
+                    speaker will present practical experience and insights on design processes. Today, Dorene Maniccia gives her remarkable lighting design projects and introduction of Philips Lighting Research North America applications team to a brilliant
+                    student group that has many different background. In Feb. 22, Patricia Rizzo will offer a lecture in the class. Students will be working on weekly assignments and a project relating to everything about 'LIGHT' throughout the course.
+                    Philips applications team will be guiding student's project in the lab session. Looking forward to learning design principles and working on projects using Hue, together.</p>
+                <p class="normal">
+
+                </p>
+                <ul>
+                    <li><span></span>One of interesting things - <a href="http://www.tate.org.uk/whats-on/exhibition/unilever-series-olafur-eliasson-weather-project/olafur-eliasson-weather-project">Olafur Eliasson's The Weather Project, 2003</a>.
+                        <a href="https://www.youtube.com/watch?v=kjrKYEEYhTQ">Check it out</a> (video)
+                        <br>
+                    </li>
+                    <li>more information on the course - How to Design [Almost] Anything: Check class website
+                        <br>
+                    </li>
+                </ul>
+                <br>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
