--- a/editable_James_release.html
+++ b/editable_James_release.html
@@ -621,9 +621,9 @@
                         <br>
                     </div>
                     <div>
-                        <p class="normal"><span>&nbsp;&nbsp; &nbsp;</span>to a showcase my work over the course. Learning HTML, CSS and Java language is actually fun. I did it many many years ago by using HTML tags line by line and now need to refresh almost everything.
-                            Fortunately, <a href="//silex.me"><span style="color: rgb(61, 133, 198);">SILEXLABS </span></a>is there I found. You can use their editor tool from any web browser to add text and images like MS Word. Also, there are many templates
-                            to download free - my website is one of their templates. I modified it by using HTML and CSS with a notepad or other text editors.
+                        <p class="normal"><span>&nbsp;&nbsp; &nbsp;</span>to showcase my work over the course. Learning HTML, CSS and Java is actually fun. I did it many many years ago by using HTML tags line by line and now I am relearning almost everything. Fortunately,
+                            I found <a href="//silex.me"><span style="color: rgb(61, 133, 198);">SILEXLABS</span></a>. You can use their editor tool from any web browser to add text and images, like MS Word. Also, there are many templates to download
+                            for free - my website is one of their templates. I modified it by using HTML and CSS with a notepad and other text editors.
                             <br>
                         </p>
                         <p class="normal"><span>&nbsp;&nbsp;&nbsp; </span>I use <a href="//github.com"><span style="color: rgb(61, 133, 198);">GitHub </span></a>Repository to save all files required for the web page. You can access the repository anywhere and edit it anytime
