--- a/editable_James_release.html
+++ b/editable_James_release.html
@@ -588,14 +588,14 @@
                         <br>
                     </div>
                     <div>
-                        <p class="normal"><span>&nbsp;&nbsp; &nbsp;</span>Since Solid-State Lighting (SSL) has made significant improvements, many different types of light source form factors are available in the market for color changing and lighting control. With more
-                            options to choose a light source, the illumination and product design is getting more flexible and functional compared to incandescent or fluorescent light phasing out. I thought about how we are able to practice the advanced
-                            technologies for design products and illumination, creating more comfortable and controllable ambience. Obviously there would be more freedom of lighting design, even beyond illumination.
+                        <p class="normal"><span>&nbsp;&nbsp; &nbsp;</span>Since Solid-State Lighting (SSL) has made significant improvements in the past decade, many different types of light source form factors are available in the market for color changing and lighting
+                            control. With more options for light source, the illumination and product designs are getting more flexible, innovative, and functional, while incandescent and fluorescent light are phasing out. I thought about how we would
+                            be able to practice the advanced technologies for design products and illumination, creating a more comfortable and controllable ambience. Obviously, there would be more freedom of lighting design, even beyond illumination.
                             <br>
                         </p>
-                        <p class="normal"><span>&nbsp;&nbsp;&nbsp; </span>Slider linked below is to present the timeline of lighting source of incandescent, fluorescent and LEDs that quickly replace the old types of light and have a lot of benefits. Selected two examples,
-                            one is a case for beyond illumination, information display lighting design using Philips iColor Flex at Northeastern University, Boston, MA. Another is an example of LED lighting product design which is flexible and versatile
-                            from <a href="//www.designledproducts.com" target="_blank">designledproducts.com</a>. It could be interesting to see how it is unique in design for function.
+                        <p class="normal"><span>&nbsp;&nbsp;&nbsp; </span>Slider linked below is to present the timeline of the lighting source for incandescent, fluorescent and LEDs that improved performance and quickly replaced the old types of light. I selected two
+                            examples, one is a case for beyond illumination, information display lighting design using Philips iColor Flex at Northeastern University, Boston, MA. Another is an example of LED lighting product design which is flexible and
+                            versatile from <a href="//www.designledproducts.com" target="_blank">designledproducts.com</a>. It will be interesting to see how they are unique in their design and function.
                             <br>
                         </p>
                         <p class="normal">
