--- a/editable_James_release.html
+++ b/editable_James_release.html
@@ -622,11 +622,11 @@
                     </div>
                     <div>
                         <p class="normal"><span>&nbsp;&nbsp; &nbsp;</span>to showcase my work over the course. Learning HTML, CSS and Java is actually fun. I did it many many years ago by using HTML tags line by line and now I am relearning almost everything. Fortunately,
-                            I found <a href="//silex.me"><span style="color: rgb(61, 133, 198);">SILEXLABS</span></a>. You can use their editor tool from any web browser to add text and images, like MS Word. Also, there are many templates to download
+                            I found <a href="//silex.me" target="_blank"><span style="color: rgb(61, 133, 198);">SILEXLABS</span></a>. You can use their editor tool from any web browser to add text and images, like MS Word. Also, there are many templates to download
                             for free - my website is one of their templates. I modified it by using HTML and CSS with a notepad and other text editors.
                             <br>
                         </p>
-                        <p class="normal"><span>&nbsp;&nbsp;&nbsp; </span>I use <a href="//github.com"><span style="color: rgb(61, 133, 198);">GitHub </span></a>Repository to save all files required for the web page. You can access the repository anywhere and edit it anytime
+                        <p class="normal"><span>&nbsp;&nbsp;&nbsp; </span>I use <a href="//github.com" target="_blank"><span style="color: rgb(61, 133, 198);">GitHub </span></a>Repository to save all files required for the web page. You can access the repository anywhere and edit it anytime
                             through a web browser. My url is https://jehkim.github.io/howtodesign/
                             <br>
                         </p>
@@ -655,11 +655,11 @@
 
                         </p>
                         <ul>
-                            <li>Points of Interest - <a href="//www.tate.org.uk/whats-on/exhibition/unilever-series-olafur-eliasson-weather-project/olafur-eliasson-weather-project">Olafur Eliasson's The Weather Project, 2003</a>.
-                                <a href="https://www.youtube.com/watch?v=kjrKYEEYhTQ">Check it out</a> (video)
+                            <li>Points of Interest - <a href="//www.tate.org.uk/whats-on/exhibition/unilever-series-olafur-eliasson-weather-project/olafur-eliasson-weather-project" target="_blank">Olafur Eliasson's The Weather Project, 2003</a>.
+                                <a href="https://www.youtube.com/watch?v=kjrKYEEYhTQ" target="_blank">Check it out</a> (video)
                                 <br>
                             </li>
-                            <li>More information on the course - How to Design [Almost] Anything: Check <a href="http://howtodesign.mit.edu/">class website</a>
+                            <li>More information on the course - How to Design [Almost] Anything: Check <a href="http://howtodesign.mit.edu/" target="_blank">class website</a>
                                 <br>
                             </li>
                         </ul>
@@ -674,7 +674,7 @@
         <div data-silex-type="container" class="editable-style silex-element-content website-width silex-container-content container-element prevent-draggable silex-id-1483130400382-11" data-silex-id="silex-id-1483130400382-11">
             <div data-silex-type="text" class="editable-style text-element full-width small-text silex-id-1436036522220-7" data-silex-id="silex-id-1436036522220-7">
                 <div class="silex-element-content normal">
-                    <div style="text-align: center;"><a href="//silexlabs.github.io/silex-templates/">creative commons Silex templates</a> - inspired by&nbsp;<a href="//www.wix.com/website-template/view/html/750?utm_campaign=ct_general&amp;experiment_id=wixblog_pt_post">this wix template</a>&nbsp;-
+                    <div style="text-align: center;"><a href="//silexlabs.github.io/silex-templates/" target="_blank">creative commons Silex templates</a> - inspired by&nbsp;<a href="//www.wix.com/website-template/view/html/750?utm_campaign=ct_general&amp;experiment_id=wixblog_pt_post" target="_blank">this wix template</a>&nbsp;-
                         Silex Labs logo by&nbsp;@superwup
                     </div>
                 </div>
