--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@
             <div data-silex-type="text" class="editable-style text-element silex-id-1436036524230-27" data-silex-id="silex-id-1436036524230-27">
                 <div class="silex-element-content normal">
                     <p class="normal"><font size="5">Spring 2017, Wed 2-5pm + Lab <br></font></p>
-                    <p class="normal"><font size="5">Class Website: <a href="//howtodesign.mit.edu/" target="_blank">howtodesign.mit.edu</a></font></p>
+                    <p class="normal"><font size="5">Class Website: <a href="http://howtodesign.mit.edu/" target="_blank">howtodesign.mit.edu</a></font></p>
                     <p class="normal"><font size="5"><br></font></p>
                 </div>
             </div>
