--- a/editable_James_release.html
+++ b/editable_James_release.html
@@ -506,7 +506,7 @@
             </div>
             <div data-silex-type="text" class="editable-style text-element page-link-active silex-id-1487908536532-7" data-silex-href="#!page-home" data-silex-id="silex-id-1487908536532-7" style="">
                 <div class="silex-element-content normal">
-                    <div style="text-align: center;">Week 1</div>
+                    <div style="text-align: center;"><a href="#!page-week1">Week 1</a></div>
                 </div>
             </div>
         </div>
