--- a/editable_James_release.html
+++ b/editable_James_release.html
@@ -104,7 +104,32 @@
         @media only screen and (max-width: 480px), only screen and (max-device-width: 480px){.silex-id-1483130355289-6 {
             min-height: 218px; 
         }
-        }.silex-id-1436036522119-6 {
+        }.silex-id-1436036524531-30 {
+            width: 463px; 
+            top: 106px; 
+            left: 49px; 
+            background-color: transparent; 
+            min-height: 141px; 
+        }
+        .silex-id-1436036524330-28 {
+            width: 329px; 
+            top: 21px; 
+            left: 123px; 
+            min-height: 108px; 
+        }
+        .silex-id-1487394551091-4 {
+            min-height: 120px; 
+            width: 120px; 
+            top: 7px; 
+            left: 1px; 
+        }
+        .silex-id-1487539135930-0 {
+            min-height: 120px; 
+            width: 120px; 
+            top: 7px; 
+            left: 1px; 
+        }
+        .silex-id-1436036522119-6 {
             width: 383px; 
             top: 108px; 
             left: 536px; 
@@ -405,6 +430,8 @@
 
 
 
+
+
     <style id="current-page-style">
         .page-week1{display:inherit; }
     </style>
@@ -418,7 +445,18 @@
     </div>
     <div data-silex-type="container" class="prevent-draggable container-element editable-style silex-id-1483130355289-7 section-element website-min-width" data-silex-id="silex-id-1483130355289-7" style="">
         <div data-silex-type="container" class="editable-style silex-element-content website-width silex-id-1483130355289-6 silex-container-content container-element prevent-draggable" data-silex-id="silex-id-1483130355289-6">
+            <div data-silex-type="container" class="editable-style container-element silex-id-1436036524531-30" data-silex-href="#!page-home" data-silex-id="silex-id-1436036524531-30">
 
+                <div data-silex-type="text" class="editable-style text-element grey-text silex-id-1436036524330-28" data-silex-id="silex-id-1436036524330-28">
+                    <div class="silex-element-content normal">
+                        <h1 class="heading1">James Jehong Kim</h1>Optics Expertise at Philips Lighting Research North America
+                        <div>jehong.kim@philips.com</div>
+                    </div>
+                </div>
+
+                <div data-silex-type="image" class="editable-style silex-id-1487394551091-4 image-element page-home paged-element" data-silex-id="silex-id-1487394551091-4" style=""><img src="Photos/myphoto_round_BW.jpg" class="silex-element-content"></div>
+                <div data-silex-type="image" class="editable-style image-element silex-id-1487539135930-0 page-about paged-element" data-silex-id="silex-id-1487539135930-0" style=""><img src="Photos/myphoto_round_BW.jpg" class="silex-element-content"></div>
+            </div>
             <div data-silex-type="container" class="editable-style container-element link-menu silex-id-1436036522119-6 hide-on-mobile" data-silex-id="silex-id-1436036522119-6">
                 <div data-silex-type="text" class="editable-style text-element silex-id-1436036522018-5" data-silex-href="#!page-home" data-silex-id="silex-id-1436036522018-5">
                     <div class="silex-element-content normal">
@@ -780,6 +818,8 @@
             </div>
         </div>
     </div>
+
+
 
 
 
