--- a/editable_James_release.html
+++ b/editable_James_release.html
@@ -483,9 +483,20 @@
             </div>
             <div data-silex-type="html" class="editable-style silex-id-1487906838387-6 html-element" data-silex-id="silex-id-1487906838387-6" style="">
                 <div class="silex-element-content">
+                    <style>
+                        table, th, td {
+                            border: 1px solid black;
+                            border-collapse: collapse;
+                        }
+                        th, td {
+                            padding: 15px;
+                        }
+                    </style>
+
+
+
 
                     <hr width="100%" color="#49BBCC" noshade="">
-                    <br>
                     <table style="width:100%">
                         <tbody>
                             <tr>
