--- a/editable_James_release.html
+++ b/editable_James_release.html
@@ -157,7 +157,7 @@
             left: 0px; 
         }
         }.silex-id-1483131519736-30 {
-            min-height: 598px; 
+            min-height: 665px; 
             background-color: transparent; 
         }
         @media only screen and (max-width: 480px), only screen and (max-device-width: 480px){.silex-id-1483131519736-30 {
@@ -428,6 +428,8 @@
 
 
 
+
+
     <style id="current-page-style">
         .page-home{display:inherit; }
     </style>
@@ -507,7 +509,8 @@
                                     <br> Introduction</td>
                                 <td valign="top" width="200">Week 2:
                                     <br> Culture + Context</td>
-                                <td valign="top" width="200">Week 3:
+                                <td valign="top" width="200">
+                                    <a href="Week3"></a>Week 3:
                                     <br> Seeing</td>
                                 <td valign="top" width="200">Week 4:
                                     <br> Concepts + Idea Generation</td>
@@ -858,6 +861,8 @@
             </div>
         </div>
     </div>
+
+
 
 
 
