--- a/editable_James_release.html
+++ b/editable_James_release.html
@@ -510,7 +510,7 @@
                                 <td valign="top" width="200">Week 2:
                                     <br> Culture + Context</td>
                                 <td valign="top" width="200">
-                                    <a href="../../../../../../../Week3.html"></a>Week 3:
+                                    <a href="https://jehkim.github.io/howtodesign/Week3.html"></a>Week 3:
                                     <br> Seeing</td>
                                 <td valign="top" width="200">Week 4:
                                     <br> Concepts + Idea Generation</td>
