--- a/editable_James_release.html
+++ b/editable_James_release.html
@@ -509,9 +509,8 @@
                                     <br> Introduction</td>
                                 <td valign="top" width="200">Week 2:
                                     <br> Culture + Context</td>
-                                <td valign="top" width="200">
-                                    <a href="https://jehkim.github.io/howtodesign/Week3.html"></a>Week 3:
-                                    <br> Seeing</td>
+                                <td valign="top" width="200"><a href="https://jehkim.github.io/howtodesign/Week3.html">Week 3:
+                                    <br> Seeing</a></td>
                                 <td valign="top" width="200">Week 4:
                                     <br> Concepts + Idea Generation</td>
                                 <td valign="top" width="200">Week 5:
