--- a/editable_James_release.html
+++ b/editable_James_release.html
@@ -801,15 +801,14 @@
                     <div>
                         <p class="normal"><span>&nbsp; &nbsp; Guest: Patricia Rizzo, Philips Lighting Research North America, Applications Team</span></p>
                         <p class="normal"><span><br></span></p>
-                        <p class="normal"><span><span>&nbsp; &nbsp; Starting from what light and lighting difference, Patricia's lecture is extremely helpful learn and understand lighting design with her contributions in variety of projects. Talking&nbsp;about language of lighting, perception/reality, and design considerations - location, intensity, distribution, color, and more. Many examples&nbsp;throughout her presentation will help us a lot understand how we approach light&nbsp;design from concepts, sketch to reality. Also - it was a great time offering comments to students' work they have done last week, a photo right below.&nbsp;</span>
+                        <p class="normal"><span><span>&nbsp; &nbsp; Starting with the&nbsp;differences between light and lighting, Patricia's lecture and her contributions to a variety of projects are extremely helpful in learning and understanding lighting design. She addressed the language of lighting, perception/reality, and design considerations - location, intensity, distribution, color, and more. The examples shown in her presentation will improve our&nbsp;understanding of how to approach light&nbsp;design and turn concepts, sketches into reality. Also - I had a great time offering comments to students' work from last week, a photo right below.&nbsp;</span>
                             </span>
                         </p>
                         <p class="normal"><span><span><br></span></span>
                         </p>
-                        <p class="normal"><span><span><span>&nbsp; &nbsp; Each student presents their work of assignment - Select a scenario/context/site to analyze light - how is it used, controlled, how does it impact the environment? Sharing their observations of lighting objects and illumination for a variety of structures, situations, controls. Each selection of student will be continued to next assignments connected&nbsp;</span>
+                        <p class="normal">&nbsp;<span style="background-color: rgb(255, 255, 255);"> &nbsp; Each student presents their assigned work</span>- Select a scenario/context/site in which to analyze light - how is it used? &nbsp;Controlled? How does it impact
+                            the environment? Share observations of lighting objects and illumination for a variety of structures, situations, controls. S<span style="background-color: rgb(255, 255, 255);">tudents will continue to next part of the assignment involving their observed lighting.</span>
                             <br>
-                            </span>
-                            </span>
                         </p>
                     </div>
                 </div>
