--- a/editable_James_release.html
+++ b/editable_James_release.html
@@ -587,28 +587,28 @@
             </div>
 
             <div data-silex-type="text" class="editable-style silex-id-1487911454808-0 text-element" data-silex-id="silex-id-1487911454808-0" style="">
-                <div class="silex-element-content normal"><a href="https://jehkim.github.io/howtodesign/Week3.html">Week 0:</a>
+                <div class="silex-element-content normal">Week 0:
                     <div><font size="2">Introduction</font></div>
                 </div>
             </div>
             <div data-silex-type="text" class="editable-style text-element silex-id-1487911876566-4" data-silex-id="silex-id-1487911876566-4" style="">
-                <div class="silex-element-content normal"><a href="https://jehkim.github.io/howtodesign/Week3.html">Week 1:</a>
+                <div class="silex-element-content normal">Week 1:
                     <div><font size="2">Culture+Context</font></div>
                 </div>
             </div>
             <div data-silex-type="text" class="editable-style text-element silex-id-1487911950360-5" data-silex-id="silex-id-1487911950360-5" style="">
-                <div class="silex-element-content normal"><a href="https://jehkim.github.io/howtodesign/Week3.html">Week 2:</a>
+                <div class="silex-element-content normal">Week 2:
                     <div><font size="2">Seeing</font></div>
                 </div>
             </div>
             <div data-silex-type="text" class="editable-style text-element silex-id-1487912004397-6" data-silex-id="silex-id-1487912004397-6" style="">
-                <div class="silex-element-content normal"><font color="#999999"><a href="https://jehkim.github.io/howtodesign/Week3.html">Week 3:</a>
+                <div class="silex-element-content normal"><font color="#999999">Week 3:
                     </font>
                     <div><font size="2" color="#999999">Concepts+Idea Generation</font></div>
                 </div>
             </div>
             <div data-silex-type="text" class="editable-style text-element silex-id-1487912052846-7" data-silex-id="silex-id-1487912052846-7" style="">
-                <div class="silex-element-content normal"><span style="background-color: rgb(153, 153, 153);"><a href="https://jehkim.github.io/howtodesign/Week3.html">Week 4:</a>
+                <div class="silex-element-content normal"><span style="background-color: rgb(153, 153, 153);">Week 4:
                     </span>
                     <div><font size="2" style="background-color: rgb(153, 153, 153);">Design Process/Tools</font></div>
                 </div>
