--- a/index.html
+++ b/index.html
@@ -608,9 +608,10 @@
                 </div>
             </div>
             <div data-silex-type="text" class="editable-style text-element silex-id-1487912052846-7" data-silex-id="silex-id-1487912052846-7" style="">
-                <div class="silex-element-content normal"><span style="background-color: rgb(153, 153, 153);">Week 4:
-                    </span>
-                    <div><font size="2" style="background-color: rgb(153, 153, 153);">Design Process/Tools</font></div>
+                <div class="silex-element-content normal"><span style="background-color: rgb(255, 255, 255);"><font color="#999999">Week 4:
+                    
+                    </font></span>
+                    <div><font size="2" style="background-color: rgb(255, 255, 255);" color="#999999">Design Process/Tools</font></div>
                 </div>
             </div>
         </div>
