--- a/week2_.html
+++ b/week2_.html
@@ -104,7 +104,7 @@
         }
         }.silex-id-1483130355289-6 {
             min-height: 102px; 
-            background-color: transparent; 
+            background-color: rgb(255, 255, 255); 
         }
         @media only screen and (max-width: 480px), only screen and (max-device-width: 480px){.silex-id-1483130355289-6 {
             min-height: 218px; 
@@ -113,7 +113,7 @@
             width: 383px; 
             top: 20px; 
             left: 536px; 
-            background-color: transparent; 
+            background-color: rgb(255, 255, 255); 
             min-height: 63px; 
         }
         .silex-id-1436036522018-5 {
