--- a/week2_.html
+++ b/week2_.html
@@ -104,7 +104,7 @@
         }
         }.silex-id-1483130355289-6 {
             min-height: 102px; 
-            background-color: rgb(255, 255, 255); 
+            background-color: transparent; 
         }
         @media only screen and (max-width: 480px), only screen and (max-device-width: 480px){.silex-id-1483130355289-6 {
             min-height: 218px; 
@@ -113,19 +113,21 @@
             width: 383px; 
             top: 20px; 
             left: 536px; 
-            background-color: rgb(255, 255, 255); 
+            background-color: transparent; 
             min-height: 63px; 
         }
         .silex-id-1436036522018-5 {
             width: 90px; 
             top: 20px; 
             left: 142px; 
+			background-color: rgb(0,0,0); 
             min-height: 33px; 
         }
         .silex-id-1436036521917-4 {
             width: 90px; 
             top: 20px; 
             left: 238px; 
+			background-color: rgb(0,0,0); 
             min-height: 33px; 
         }
         .silex-id-1483131410736-25 {
