--- a/editable_James_release.html
+++ b/editable_James_release.html
@@ -471,6 +471,8 @@
 
 
 
+
+
     <style id="current-page-style">
         .page-home{display:inherit; }
     </style>
@@ -547,14 +549,14 @@
             <div data-silex-type="text" class="editable-style text-element silex-id-1487912004397-6" data-silex-id="silex-id-1487912004397-6" style="">
                 <div class="silex-element-content normal"><font color="#999999">Week 3:
                     </font>
-                    <div><font size="2" color="#999999">Concepts+Idea Generation</font></div>
+                    <div><font color="#999999" size="2">Concepts+Idea Generation</font></div>
                 </div>
             </div>
             <div data-silex-type="text" class="editable-style text-element silex-id-1487912052846-7" data-silex-id="silex-id-1487912052846-7" style="">
                 <div class="silex-element-content normal"><span style="background-color: rgb(255, 255, 255);"><font color="#999999">Week 4:
                     
                     </font></span>
-                    <div><font style="background-color: rgb(255, 255, 255);" size="2" color="#999999">Design Process/Tools</font></div>
+                    <div><font style="background-color: rgb(255, 255, 255);" color="#999999" size="2">Design Process/Tools</font></div>
                 </div>
             </div>
         </div>
@@ -875,6 +877,8 @@
             </div>
         </div>
     </div>
+
+
 
 
 
