--- a/week2.html
+++ b/week2.html
@@ -9,9 +9,9 @@
       <center>
             <p><br></p>
             <img class="mySlides" src="./Photos/week2_seeing/slider/Slide1.jpg" style="width:70%" align="middle">
-            <img class="mySlides" src="https://github.com/jehkim/howtodesign/blob/master/Photos/week2_seeing/slider/Slide2.jpg" style="width: 70%" align="middle">
-            <img class="mySlides" src="https://github.com/jehkim/howtodesign/blob/master/Photos/week2_seeing/slider/Slide3.jpg" style="width: 70%" align="middle">
-            <img class="mySlides" src="https://github.com/jehkim/howtodesign/blob/master/Photos/week2_seeing/slider/Slide4.jpg" style="width: 70%" align="middle">
+            <img class="mySlides" src="./Photos/week2_seeing/slider/Slide2.jpg" style="width: 70%" align="middle">
+            <img class="mySlides" src="./Photos/week2_seeing/slider/Slide3.jpg" style="width: 70%" align="middle">
+            <img class="mySlides" src="./Photos/week2_seeing/slider/Slide4.jpg" style="width: 70%" align="middle">
       </center>
 
       <a class="w3-btn-floating w3-display-left" onclick="plusDivs(-1)">&#10094;</a>
