--- a/week2.html
+++ b/week2.html
@@ -8,10 +8,10 @@
       <div>
       <center>
             <p><br></p>
-            <img class="mySlides" src="week2_Slide1.JPG" style="width:70%" align="middle">
-            <img class="mySlides" src="week2_Slide2.JPG" style="width:70%">
-            <img class="mySlides" src="week2_Slide3.JPG" style="width:70%">
-            <img class="mySlides" src="week2_Slide4.JPG" style="width:70%">
+            <img class="mySlides" src="https://jehkim.github.io/howtodesign/week2_Slide1.JPG" style="width:70%" align="middle">
+            <img class="mySlides" src="https://jehkim.github.io/howtodesign/week2_Slide2.JPG" style="width:70%">
+            <img class="mySlides" src="https://jehkim.github.io/howtodesign/week2_Slide3.JPG" style="width:70%">
+            <img class="mySlides" src="https://jehkim.github.io/howtodesign/week2_Slide4.JPG" style="width:70%">
       </center>
 
       <a class="w3-btn-floating w3-display-left" onclick="plusDivs(-1)">&#10094;</a>
