--- a/week2.html
+++ b/week2.html
@@ -8,10 +8,10 @@
       <div>
       <center>
             <p><br></p>
-            <img class="mySlides" src="https://jehkim.github.io/howtodesign/week2_Slide1.JPG" style="width:70%" align="middle">
-            <img class="mySlides" src="https://jehkim.github.io/howtodesign/week2_Slide2.JPG" style="width:70%">
-            <img class="mySlides" src="https://jehkim.github.io/howtodesign/week2_Slide3.JPG" style="width:70%">
-            <img class="mySlides" src="https://jehkim.github.io/howtodesign/week2_Slide4.JPG" style="width:70%">
+            <img class="mySlides2" src="https://jehkim.github.io/howtodesign/week2_Slide1.JPG" style="width:70%" align="middle">
+            <img class="mySlides2" src="https://jehkim.github.io/howtodesign/week2_Slide2.JPG" style="width:70%">
+            <img class="mySlides2" src="https://jehkim.github.io/howtodesign/week2_Slide3.JPG" style="width:70%">
+            <img class="mySlides2" src="https://jehkim.github.io/howtodesign/week2_Slide4.JPG" style="width:70%">
       </center>
 
       <a class="w3-btn-floating w3-display-left" onclick="plusDivs(-1)">&#10094;</a>
@@ -29,7 +29,7 @@ function plusDivs(n) {
 
 function showDivs(n) {
   var i;
-  var x = document.getElementsByClassName("mySlides");
+  var x = document.getElementsByClassName("mySlides2");
   if (n > x.length) {slideIndex = 1}    
   if (n < 1) {slideIndex = x.length}
   for (i = 0; i < x.length; i++) {
