--- a/week2.html
+++ b/week2.html
@@ -5,6 +5,7 @@
 <link rel="stylesheet" href="https://www.w3schools.com/lib/w3.css">
 
 <body>
+      background-color: #93B874;
       <div>
       <center>
             <p><br></p>
