--- a/week2.html
+++ b/week2.html
@@ -4,8 +4,11 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/lib/w3.css">
 
+<style>
+    background-color: rgb(0,0,0);
+</style>
+      
 <body>
-      background-color: #93B874;
       <div>
       <center>
             <p><br></p>
