--- a/week2.html
+++ b/week2.html
@@ -5,7 +5,9 @@
 <link rel="stylesheet" href="https://www.w3schools.com/lib/w3.css">
 
 <style>
+body {
     background-color: rgb(0,0,0);
+}
 </style>
       
 <body>
