--- a/week2.html
+++ b/week2.html
@@ -3,12 +3,13 @@
 <title>week2:Seeing</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/lib/w3.css">
-
+<head>
 <style>
 body {
     background-color: rgb(0,0,0);
 }
 </style>
+</head>
       
 <body>
       <div>
