--- a/week2.html
+++ b/week2.html
@@ -17,11 +17,8 @@ body {
 
             <img class="mySlides2" src="https://jehkim.github.io/howtodesign/week2_Slide1.JPG" style="width:60%" align="middle">
             <img class="mySlides2" src="https://jehkim.github.io/howtodesign/week2_Slide2.JPG" style="width:60%">
-            <img class="mySlides2" src="https://jehkim.github.io/howtodesign/week2_Slide3.JPG" style="width:60%">
-<video width="400" controls>
-  <source src="https://jehkim.github.io/howtodesign/Photos/week2_seeing/DoE 5 scenes.mp4" type="video/mp4">
-</video>    
-                <img class="mySlides2" src="https://jehkim.github.io/howtodesign/week2_Slide4.JPG" style="width:60%">
+            <img class="mySlides2" src="https://jehkim.github.io/howtodesign/week2_Slide3.JPG" style="width:60%">  
+            <img class="mySlides2" src="https://jehkim.github.io/howtodesign/week2_Slide4.JPG" style="width:60%">
       </center>
 
       <a class="w3-btn-floating w3-display-left" onclick="plusDivs(-1)">&#10094;</a>
@@ -49,6 +46,14 @@ function showDivs(n) {
 }
 </script>
       
+<div>
+    <p><br><br><br></p>
+    <center>
+        <video width="400" controls>
+  <source src="https://jehkim.github.io/howtodesign/Photos/week2_seeing/DoE 5 scenes.mp4" type="video/mp4">
+</video>  
+    </center>
+    </div>
 
 </body>
       
