--- a/week2.html
+++ b/week2.html
@@ -46,10 +46,9 @@ function showDivs(n) {
 }
 </script>
       
-<div>
-    <p><br><br><br></p>
+<div style="height: 200px;">
     <center>
-        <video width="400" controls>
+        <video width="700" controls>
   <source src="https://jehkim.github.io/howtodesign/Photos/week2_seeing/DoE 5 scenes.mp4" type="video/mp4">
 </video>  
     </center>
