--- a/week2.html
+++ b/week2.html
@@ -47,6 +47,8 @@ function showDivs(n) {
 </script>
       
 <div style="height: 200px;">
+</div>
+<div>
     <center>
         <video width="700" controls>
   <source src="https://jehkim.github.io/howtodesign/Photos/week2_seeing/DoE 5 scenes.mp4" type="video/mp4">
