--- a/week2.html
+++ b/week2.html
@@ -46,8 +46,9 @@ function showDivs(n) {
 }
 </script>
       
-<div style="height: 200px;">
-</div>
+div {
+     height: 200px;>
+}
     
 <div>
     <center>
