--- a/editable_James_release.html
+++ b/editable_James_release.html
@@ -544,7 +544,7 @@
                 </div>
             </div>
             <div data-silex-type="text" class="editable-style text-element silex-id-1487911950360-5" data-silex-id="silex-id-1487911950360-5" style="">
-                <div class="silex-element-content normal"><a href="https://jehkim.github.io/howtodesign/week2.html">Week 2:                    </a>
+                <div class="silex-element-content normal"><a href="https://jehkim.github.io/howtodesign/week2.html" target="_blank">Week 2:                    </a>
                     <div><font size="2">Seeing</font></div>
                 </div>
             </div>
