--- a/editable_James_release.html
+++ b/editable_James_release.html
@@ -475,6 +475,8 @@
 
 
 
+
+
     <style id="current-page-style">
         .page-home{display:inherit; }
     </style>
@@ -539,7 +541,7 @@
                 </div>
             </div>
             <div data-silex-type="text" class="editable-style text-element silex-id-1487911876566-4" data-silex-id="silex-id-1487911876566-4" style="">
-                <div class="silex-element-content normal">Week 1:
+                <div class="silex-element-content normal"><a href="https://jehkim.github.io/howtodesign/Slider_20170222_v5.html">Week 1:                    </a>
                     <div><font size="2">Culture+Context</font></div>
                 </div>
             </div>
@@ -879,6 +881,8 @@
             </div>
         </div>
     </div>
+
+
 
 
 
